[package]
name = "zeus-fm"
description = "Fast and flexible terminal file manager"
license = "MIT"
version = "0.1.2"
authors = ["Zachary Frost"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tui = "0.10"
termion = "1.5"
lazy_static = "1.4.0"
directories = "3.0.1"
toml = "0.5.6"
regex = "1.3.9"
